# Audio

./: .gitmodules  CMakeLists.txt  Makefile  README.md
Audio/: AScheduler.cpp  AScheduler.hpp  AScheduler.ipp  AScheduler2.hpp  Audio.cmake  Automation.hpp  Automation.ipp  Automations.hpp  Base.hpp  BaseConcepts.hpp  BaseDevice.hpp  BaseIndex.cpp  BaseIndex.hpp  BaseNote.hpp  BaseVolume.hpp  Buffer.cpp  Buffer.hpp  Buffer.ipp  BufferModifier.hpp  BufferOctave.hpp  BufferOctave.ipp  Connection.hpp  Control.hpp  Control.ipp  ControlEvent.hpp  ControlTable.hpp  Controls.hpp  Device.cpp  Device.hpp  Device.ipp  ExternalFactory.hpp  FlatNode.hpp  FlatNote.hpp  IPlugin.hpp  IPluginFactory.hpp  InternalFactory.hpp  InterpolatePtr.hpp  KissFFT.hpp  KissFFT.ipp  Math.cpp  (+44 more)
Benchmarks/: AudioBenchmarks.cmake  bench_Biquad.cpp  bench_BoundsPi.cpp  bench_FIR.cpp  bench_InterpolatePtr.cpp  bench_Math.cpp  bench_Parallel.cpp  bench_Trigonometry.cpp
Partitions/: chord.partition  defaultChord.partition  defaultNote.partition  export.partition
Scripts/: Autocorrelation.py  BodePlot.py  RealResampler.py  Resample.py  Vocoder.py
Tests/: AudioTests.cmake  DummyPlugin.hpp  tests_AScheduler.cpp  tests_Automation.cpp  tests_Automations.cpp  tests_BeatRange.cpp  tests_Biquad.cpp  tests_Buffer.cpp  tests_Control.cpp  tests_Convert.cpp  tests_Device.cpp  tests_EnvelopeGenerator.cpp  tests_EnveloppeGenerator.cpp  tests_IPlugin.cpp  tests_Interpolation.cpp  tests_LogarithmInterpolation.cpp  tests_Merge.cpp  tests_Note.cpp  tests_NoteManager.cpp  tests_ParameterTable.cpp  tests_Partition.cpp  (+10 more)
(+138 files in other folders)
